Fix dark mode for header

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,7 @@
 	--color-bg-1: hsl(209, 36%, 86%);
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-bg-dark: #000;
+	--color-bg-light: #fff;
 	--color-theme-1: #cc2446;
 	--color-theme-2: #36628c;
 	--color-theme-3: #732e8b;
